# cairo-win-build

./: .gitignore  README.md  build-cairo.py  requirements.txt
.github/workflows/: main.yml
cairo-build/: meson.build
cairo-build/subprojects/: cairo.wrap  pixman.wrap
cairo-build/subprojects/packagefiles/: cairo-302.patch
cairo-subprojects/: fontconfig.wrap  pixman.wrap
pkgconf-build/: meson.build
pkgconf-build/subprojects/: pkgconf.wrap
